enforce security by accepting only trusted connections

--- a/geonode_formhub/local_settings.sample
+++ b/geonode_formhub/local_settings.sample
@@ -4,6 +4,8 @@ import geonode_formhub
 #The formhub media url
 FORMHUB_MEDIA_URL = 'http://192.168.2.1:8000/media/'
 
+FORMHUB_TRUSTED_IP = '127.0.0.1'
+
 GEONODE_FORMHUB_ROOT = os.path.abspath(os.path.dirname(geonode_formhub.__file__))
 PROJECT_ROOT = os.path.abspath(os.path.dirname(__file__))
 
